[gd_scene load_steps=3 format=3 uid="uid://biopddoon2btm"]

[ext_resource type="Script" path="res://Scenes/LevelChanger/level_changer.gd" id="1_dlosa"]
[ext_resource type="PackedScene" uid="uid://e8b4rmlw3os7" path="res://Scenes/PowerUpShop/PowerUpShop.tscn" id="2_isc0t"]

[node name="LevelChanger" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_dlosa")
metadata/_edit_horizontal_guides_ = [337.0]
metadata/_edit_vertical_guides_ = [573.0]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 31.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ShopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Shop
"

[node name="DummyLevel" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Dummy Level"

[node name="Level1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 1
"

[node name="Level2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 2
"

[node name="Level3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 3
"

[node name="Level4" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 4
"

[node name="Level5" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 5
"

[node name="Level6" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 6
"

[node name="Level7" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level 7
"

[node name="PowerUpShop" parent="." instance=ExtResource("2_isc0t")]
visible = false
position = Vector2(547, 334)

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DummyLevel" to="." method="_on_dummy_level_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Level7" to="." method="_on_level_7_pressed"]
